# bspatch

./: README.md
library-bspatch/: .gitignore  README.md  build.gradle  upload_to_maven_central.gradle
library-bspatch/gradle/wrapper/: gradle-wrapper.properties
library-bspatch/outputs/: library-bspatch-release-1.0.aar
library-bspatch/outputs/tools/bspatch-bzip2-1.0.6/android/: bspatch-0.0.3-release.aar
library-bspatch/src/main/: AndroidManifest.xml
library-bspatch/src/main/cpp/: CMakeLists.txt
library-bspatch/src/main/cpp/bspatch/: CMakeLists.txt
library-bspatch/src/main/cpp/bspatch/src/: bspatch.c
library-bspatch/src/main/cpp/bspatch/src/bzip2-1.0.6/: bzip2recover.c  mk251.c
library-bspatch/src/main/res/values/: strings.xml
